i2f-extension/i2f-extension-antlr4/src/main/java/i2f/extension/antlr4/script/tiny/TinyScriptParser.java
// Generated from /extension/antlr4/script/tiny/rule/TinyScript.g4 by ANTLR 4.13.2

    package i2f.extension.antlr4.script.tiny;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class TinyScriptParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, TERM_COMMENT_SINGLE_LINE=64, TERM_COMMENT_MULTI_LINE=65, 
		TERM_CONST_STRING_MULTILINE=66, TERM_CONST_STRING_MULTILINE_QUOTE=67, 
		TERM_CONST_STRING_RENDER=68, TERM_CONST_STRING_RENDER_SINGLE=69, TERM_CONST_STRING=70, 
		TERM_CONST_STRING_SINGLE=71, TERM_CONST_BOOLEAN=72, TERM_CONST_NULL=73, 
		TERM_CONST_TYPE_CLASS=74, REF_EXPRESS=75, TERM_CONST_NUMBER_SCIEN_2=76, 
		TERM_CONST_NUMBER_SCIEN_1=77, TERM_CONST_NUMBER_FLOAT=78, TERM_CONST_NUMBER=79, 
		TERM_CONST_NUMBER_HEX=80, TERM_CONST_NUMBER_OTC=81, TERM_CONST_NUMBER_BIN=82, 
		TERM_INTEGER=83, NAMING=84, ROUTE_NAMING=85, ID=86, TERM_QUOTE=87, ESCAPED_CHAR=88, 
		TERM_PAREN_L=89, TERM_PAREN_R=90, TERM_COMMA=91, TERM_DOT=92, TERM_DOLLAR=93, 
		TERM_CURLY_L=94, TERM_CURLY_R=95, TERM_SEMICOLON=96, TERM_COLON=97, TERM_BRACKET_SQUARE_L=98, 
		TERM_BRACKET_SQUARE_R=99, CH_E=100, CH_0X=101, CH_0T=102, CH_0B=103, TERM_DIGIT=104, 
		TERM_HEX_LETTER=105, TERM_OTC_LETTER=106, TERM_BIN_LETTER=107, WS=108;
	public static final int
		RULE_script = 0, RULE_segments = 1, RULE_express = 2, RULE_prefixOperator = 3, 
		RULE_pipelineFunctionSegment = 4, RULE_declareFunction = 5, RULE_parameterList = 6, 
		RULE_debuggerSegment = 7, RULE_trySegment = 8, RULE_throwSegment = 9, 
		RULE_tryBodyBlock = 10, RULE_catchBodyBlock = 11, RULE_finallyBodyBlock = 12, 
		RULE_classNameBlock = 13, RULE_parenSegment = 14, RULE_controlSegment = 15, 
		RULE_whileSegment = 16, RULE_doWhileSegment = 17, RULE_forSegment = 18, 
		RULE_foreachSegment = 19, RULE_namingBlock = 20, RULE_ifSegment = 21, 
		RULE_conditionBlock = 22, RULE_scriptBlock = 23, RULE_equalValue = 24, 
		RULE_extractExpress = 25, RULE_extractPairs = 26, RULE_extractPair = 27, 
		RULE_staticEnumValue = 28, RULE_newInstance = 29, RULE_invokeFunction = 30, 
		RULE_functionCall = 31, RULE_refCall = 32, RULE_argumentList = 33, RULE_argument = 34, 
		RULE_argumentValue = 35, RULE_constValue = 36, RULE_refValue = 37, RULE_constBool = 38, 
		RULE_constNull = 39, RULE_constClass = 40, RULE_constString = 41, RULE_constMultilineString = 42, 
		RULE_constRenderString = 43, RULE_decNumber = 44, RULE_hexNumber = 45, 
		RULE_otcNumber = 46, RULE_binNumber = 47, RULE_jsonValue = 48, RULE_jsonMapValue = 49, 
		RULE_jsonPairs = 50, RULE_jsonPair = 51, RULE_jsonArrayValue = 52, RULE_jsonItemList = 53;
	private static String[] makeRuleNames() {
		return new String[] {
			"script", "segments", "express", "prefixOperator", "pipelineFunctionSegment", 
			"declareFunction", "parameterList", "debuggerSegment", "trySegment", 
			"throwSegment", "tryBodyBlock", "catchBodyBlock", "finallyBodyBlock", 
			"classNameBlock", "parenSegment", "controlSegment", "whileSegment", "doWhileSegment", 
			"forSegment", "foreachSegment", "namingBlock", "ifSegment", "conditionBlock", 
			"scriptBlock", "equalValue", "extractExpress", "extractPairs", "extractPair", 
			"staticEnumValue", "newInstance", "invokeFunction", "functionCall", "refCall", 
			"argumentList", "argument", "argumentValue", "constValue", "refValue", 
			"constBool", "constNull", "constClass", "constString", "constMultilineString", 
			"constRenderString", "decNumber", "hexNumber", "otcNumber", "binNumber", 
			"jsonValue", "jsonMapValue", "jsonPairs", "jsonPair", "jsonArrayValue", 
			"jsonItemList"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'%'", "'as'", "'cast'", "'is'", "'instanceof'", "'typeof'", "'*'", 
			"'/'", "'+'", "'-'", "'in'", "'notin'", "'>='", "'gte'", "'<='", "'lte'", 
			"'!='", "'ne'", "'<>'", "'neq'", "'=='", "'eq'", "'>'", "'gt'", "'<'", 
			"'lt'", "'&&'", "'and'", "'||'", "'or'", "'?'", "'!'", "'not'", "'|>'", 
			"'::'", "'func'", "'debugger'", "'try'", "'catch'", "'|'", "'finally'", 
			"'throw'", "'break'", "'continue'", "'return'", "'while'", "'do'", "'for'", 
			"'foreach'", "'if'", "'else'", "'elif'", "'='", "'?='", "'.='", "'+='", 
			"'-='", "'*='", "'/='", "'%='", "'#'", "'@'", "'new'", null, null, null, 
			null, null, null, null, null, null, "'null'", null, null, null, null, 
			null, null, null, null, null, null, null, null, null, "'\"'", null, "'('", 
			"')'", "','", "'.'", "'$'", "'{'", "'}'", "';'", "':'", "'['", "']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "TERM_COMMENT_SINGLE_LINE", "TERM_COMMENT_MULTI_LINE", 
			"TERM_CONST_STRING_MULTILINE", "TERM_CONST_STRING_MULTILINE_QUOTE", "TERM_CONST_STRING_RENDER", 
			"TERM_CONST_STRING_RENDER_SINGLE", "TERM_CONST_STRING", "TERM_CONST_STRING_SINGLE", 
			"TERM_CONST_BOOLEAN", "TERM_CONST_NULL", "TERM_CONST_TYPE_CLASS", "REF_EXPRESS", 
			"TERM_CONST_NUMBER_SCIEN_2", "TERM_CONST_NUMBER_SCIEN_1", "TERM_CONST_NUMBER_FLOAT", 
			"TERM_CONST_NUMBER", "TERM_CONST_NUMBER_HEX", "TERM_CONST_NUMBER_OTC", 
			"TERM_CONST_NUMBER_BIN", "TERM_INTEGER", "NAMING", "ROUTE_NAMING", "ID", 
			"TERM_QUOTE", "ESCAPED_CHAR", "TERM_PAREN_L", "TERM_PAREN_R", "TERM_COMMA", 
			"TERM_DOT", "TERM_DOLLAR", "TERM_CURLY_L", "TERM_CURLY_R", "TERM_SEMICOLON", 
			"TERM_COLON", "TERM_BRACKET_SQUARE_L", "TERM_BRACKET_SQUARE_R", "CH_E", 
			"CH_0X", "CH_0T", "CH_0B", "TERM_DIGIT", "TERM_HEX_LETTER", "TERM_OTC_LETTER", 
			"TERM_BIN_LETTER", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TinyScript.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TinyScriptParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ScriptContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(TinyScriptParser.EOF, 0); }
		public SegmentsContext segments() {
			return getRuleContext(SegmentsContext.class,0);
		}
		public ScriptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_script; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TinyScriptListener ) ((TinyScriptListener)listener).enterScript(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TinyScriptListener ) ((TinyScriptListener)listener).exitScript(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TinyScriptVisitor ) return ((TinyScriptVisitor<? extends T>)visitor).visitScript(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ScriptContext script() throws RecognitionException {
		ScriptContext _localctx = new ScriptContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_script);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & -2303595113525279744L) != 0) || ((((_la - 66)) & ~0x3f) == 0 && ((1L << (_la - 66)) & 279450615807L) != 0)) {
				{
				setState(108);
				segments();
				}
			}

			setState(111);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SegmentsContext extends ParserRuleContext {
		public List<ExpressContext> express() {
			return getRuleContexts(ExpressContext.class);
		}
		public ExpressContext express(int i) {
			return getRuleContext(ExpressContext.class,i);
		}
		public List<TerminalNode> TERM_SEMICOLON() { return getTokens(TinyScriptParser.TERM_SEMICOLON); }
		public TerminalNode TERM_SEMICOLON(int i) {
			return getToken(TinyScriptParser.TERM_SEMICOLON, i);
		}
		public SegmentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_segments; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TinyScriptListener ) ((TinyScriptListener)listener).enterSegments(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TinyScriptListener ) ((TinyScriptListener)listener).exitSegments(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TinyScriptVisitor ) return ((TinyScriptVisitor<? extends T>)visitor).visitSegments(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SegmentsContext segments() throws RecognitionException {
		SegmentsContext _localctx = new SegmentsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_segments);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			express(0);
			setState(118);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(114);
					match(TERM_SEMICOLON);
					setState(115);
					express(0);
					}
					} 
				}
				setState(120);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TERM_SEMICOLON) {
				{
				setState(121);
				match(TERM_SEMICOLON);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressContext extends ParserRuleContext {
		public DebuggerSegmentContext debuggerSegment() {
			return getRuleContext(DebuggerSegmentContext.class,0);
		}
		public DeclareFunctionContext declareFunction() {
			return getRuleContext(DeclareFunctionContext.class,0);
		}
		public IfSegmentContext ifSegment() {
			return getRuleContext(IfSegmentContext.class,0);
		}
		public ForeachSegmentContext foreachSegment() {
			return getRuleContext(ForeachSegmentContext.class,0);
		}
		public ForSegmentContext forSegment() {
			return getRuleContext(ForSegmentContext.class,0);
		}
		public DoWhileSegmentContext doWhileSegment() {
			return getRuleContext(DoWhileSegmentContext.class,0);
		}
		public WhileSegmentContext whileSegment() {
			return getRuleContext(WhileSegmentContext.class,0);
		}
		public ControlSegmentContext controlSegment() {
			return getRuleContext(ControlSegmentContext.class,0);
		}
		public TrySegmentContext trySegment() {
			return getRuleContext(TrySegmentContext.class,0);
		}
		public ThrowSegmentContext throwSegment() {
			return getRuleContext(ThrowSegmentContext.class,0);
		}
		public ParenSegmentContext parenSegment() {
			return getRuleContext(ParenSegmentContext.class,0);
		}
		public PrefixOperatorContext prefixOperator() {
			return getRuleContext(PrefixOperatorContext.class,0);
		}
		public List<ExpressContext> express() {
			return getRuleContexts(ExpressContext.class);
		}
		public ExpressContext express(int i) {
			return getRuleContext(ExpressContext.class,i);
		}
		public EqualValueContext equalValue() {
			return getRuleContext(EqualValueContext.class,0);
		}
		public NewInstanceContext newInstance() {
			return getRuleContext(NewInstanceContext.class,0);
		}
		public InvokeFunctionContext invokeFunction() {
			return getRuleContext(InvokeFunctionContext.class,0);
		}
		public StaticEnumValueContext staticEnumValue() {
			return getRuleContext(StaticEnumValueContext.class,0);
		}
		public ConstValueContext constValue() {
			return getRuleContext(ConstValueContext.class,0);
		}
		public RefValueContext refValue() {
			return getRuleContext(RefValueContext.class,0);
		}
		public JsonValueContext jsonValue() {
			return getRuleContext(JsonValueContext.class,0);
		}
		public ScriptBlockContext scriptBlock() {
			return getRuleContext(ScriptBlockContext.class,0);
		}
		public TerminalNode TERM_COLON() { return getToken(TinyScriptParser.TERM_COLON, 0); }
		public TerminalNode TERM_BRACKET_SQUARE_L() { return getToken(TinyScriptParser.TERM_BRACKET_SQUARE_L, 0); }
		public TerminalNode TERM_BRACKET_SQUARE_R() { return getToken(TinyScriptParser.TERM_BRACKET_SQUARE_R, 0); }
		public List<PipelineFunctionSegmentContext> pipelineFunctionSegment() {
			return getRuleContexts(PipelineFunctionSegmentContext.class);
		}
		public PipelineFunctionSegmentContext pipelineFunctionSegment(int i) {
			return getRuleContext(PipelineFunctionSegmentContext.class,i);
		}
		public ExpressContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_express; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TinyScriptListener ) ((TinyScriptListener)listener).enterExpress(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TinyScriptListener ) ((TinyScriptListener)listener).exitExpress(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TinyScriptVisitor ) return ((TinyScriptVisitor<? extends T>)visitor).visitExpress(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressContext express() throws RecognitionException {
		return express(0);
	}

	private ExpressContext express(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpressContext _localctx = new ExpressContext(_ctx, _parentState);
		ExpressContext _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, 4, RULE_express, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(125);
				debuggerSegment();
				}
				break;
			case 2:
				{
				setState(126);
				declareFunction();
				}
				break;
			case 3:
				{
				setState(127);
				ifSegment();
				}
				break;
			case 4:
				{
				setState(128);
				foreachSegment();
				}
				break;
			case 5:
				{
				setState(129);
				forSegment();
				}
				break;
			case 6:
				{
				setState(130);
				doWhileSegment();
				}
				break;
			case 7:
				{
				setState(131);
				whileSegment();
				}
				break;
			case 8:
				{
				setState(132);
				controlSegment();
				}
				break;
			case 9:
				{
				setState(133);
				trySegment();
				}
				break;
			case 10:
				{
				setState(134);
				throwSegment();
				}
				break;
			case 11:
				{
				setState(135);
				parenSegment();
				}
				break;
			case 12:
				{
				setState(136);
				prefixOperator();
				setState(137);
				express(19);
				}
				break;
			case 13:
				{
				setState(139);
				equalValue();
				}
				break;
			case 14:
				{
				setState(140);
				newInstance();
				}
				break;
			case 15:
				{
				setState(141);
				invokeFunction();
				}
				break;
			case 16:
				{
				setState(142);
				staticEnumValue();
				}
				break;
			case 17:
				{
				setState(143);
				constValue();
				}
				break;
			case 18:
				{
				setState(144);
				refValue();
				}
				break;
			case 19:
				{
				setState(145);
				jsonValue();
				}
				break;
			case 20:
				{
				setState(146);
				scriptBlock();
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(188);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(186);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
					case 1:
						{
						_localctx = new ExpressContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_express);
						setState(149);
						if (!(precpred(_ctx, 9))) throw new FailedPredicateException(this, "precpred(_ctx, 9)");
						setState(150);
						_la = _input.LA(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 124L) != 0)) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(151);
						express(10);
						}
						break;
					case 2:
						{
						_localctx = new ExpressContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_express);
						setState(152);
						if (!(precpred(_ctx, 8))) throw new FailedPredicateException(this, "precpred(_ctx, 8)");
						setState(153);
						_la = _input.LA(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 386L) != 0)) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(154);
						express(9);
						}
						break;
					case 3:
						{
						_localctx = new ExpressContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_express);
						setState(155);
						if (!(precpred(_ctx, 7))) throw new FailedPredicateException(this, "precpred(_ctx, 7)");
						setState(156);
						_la = _input.LA(1);
						if ( !(_la==T__8 || _la==T__9) ) {
